# FastAV

./: ARCHITECTURE.md  CMakeLists.txt  Database.h  FileScanner.h  HistoryViewer.h  INSTALL.md  LICENSE  MaterialTheme.h  README.md  ScanDialog.cpp  ScanProgress.cpp  Scanner.cpp  ThreatReport.h  ThreatViewer.h  Updater.cpp  build.sh  fastav.desktop
documentation/: USAGE.md
src/: main.cpp
src/core/: Database.cpp  Scanner.h  ThreatReport.cpp  Updater.h
src/gui/: HistoryViewer.cpp  MainWindow.cpp  MainWindow.h  ScanDialog.h  ScanProgress.h  ThreatViewer.cpp
src/utils/: FileScanner.cpp  MaterialTheme.cpp
